WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47891
Web Inspector: Uncaught TypeError when connection to WebSocket server is refused
https://bugs.webkit.org/show_bug.cgi?id=47891
Summary
Web Inspector: Uncaught TypeError when connection to WebSocket server is refused
Yuta Kitamura
Reported
2010-10-19 02:07:13 PDT
The following error occurs in Resources panel when a connection to an WebSocket server is refused. Chromium's stderr looks like: "Uncaught TypeError: Cannot call method 'split' of undefined," source: chrome://devtools/DevTools.js (8852) "Uncaught TypeError: Cannot call method 'escapeHTML' of undefined," source: chrome://devtools/DevTools.js (30523) How to reproduce: 1. Start HTTP server for layout tests (run-webkit-httpd) but do NOT start the WebSocket server. 2. Start the browser, open Web Inspector, enable resource tracking, and go to <
http://localhost:8000/websocket/tests/send.html
>. 3. Observe the error. This error occurs because resource.url is not set when an WebSocket is initialized.
Attachments
Patch
(1.32 KB, patch)
2010-10-19 02:23 PDT
,
Yuta Kitamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuta Kitamura
Comment 1
2010-10-19 02:23:40 PDT
Created
attachment 71144
[details]
Patch
Fumitoshi Ukai
Comment 2
2010-10-19 02:29:33 PDT
Comment on
attachment 71144
[details]
Patch LGTM
WebKit Commit Bot
Comment 3
2010-10-19 03:22:05 PDT
Comment on
attachment 71144
[details]
Patch Clearing flags on attachment: 71144 Committed
r70043
: <
http://trac.webkit.org/changeset/70043
>
WebKit Commit Bot
Comment 4
2010-10-19 03:22:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug