2010-10-19  Yuta Kitamura  <yutak@chromium.org>

Reviewed by Pavel Feldman.

        Make sure WebSocket resource has the url field when it is created.

        Web Inspector: Uncaught TypeError when connection to WebSocket server is refused
        https://bugs.webkit.org/show_bug.cgi?id=47891

        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::createWebSocket):

Canonical link: https://commits.webkit.org/60606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70043 268f45cc-cd09-0410-ab3c-d52691b4dbfc