WebCore/inspector/InspectorResource.cpp
@@ -147,6 +147,7 @@ PassRefPtr<InspectorResource> InspectorResource::createWebSocket(unsigned long i
     RefPtr<InspectorResource> resource = adoptRef(new InspectorResource(identifier, 0, requestURL));
     resource->markWebSocket();
     resource->m_documentURL = documentURL;
+    resource->m_changes.setAll();
     return resource.release();
 }
 #endif
